-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 20
-
Component/s: hotspot
I ran the following tests with extra compiler flags:
-XX:+IgnoreUnrecognizedVMOptions -XX:-MonomorphicArrayCheck -XX:-UncommonNullCast
So far only seen it on aarch64 (linux / macosx)
jdk/incubator/vector/Float512VectorTests.java
jdk/incubator/vector/Vector128ConversionTests.java
jdk/incubator/vector/VectorMaxConversionTests.java
Error mixing types: vectorx[4]:{float_top} and float_top
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:1179
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S107603/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/57d56251-e15d-4be2-a96f-2fece2c8162e/runs/971fce5c-2e86-4644-94a9-92f392cad7dc/workspace/open/src/hotspot/share/opto/type.cpp:1179), pid=1036744, tid=1036759
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-internal-2022-10-14-0755324.emanuel.peter.fork3-jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-internal-2022-10-14-0755324.emanuel.peter.fork3-jdk, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x17d8378] Type::typerr(Type const*) const+0x84
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S48953/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6a05eca0-8afd-44ed-bb10-6608b5100f7c/runs/24fb71ad-6cc1-49b1-bb99-393b164a2865/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/3/core.1036744)
#
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S48953/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6a05eca0-8afd-44ed-bb10-6608b5100f7c/runs/24fb71ad-6cc1-49b1-bb99-393b164a2865/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/3/hs_err_pid1036744.log
-XX:+IgnoreUnrecognizedVMOptions -XX:-MonomorphicArrayCheck -XX:-UncommonNullCast
So far only seen it on aarch64 (linux / macosx)
jdk/incubator/vector/Float512VectorTests.java
jdk/incubator/vector/Vector128ConversionTests.java
jdk/incubator/vector/VectorMaxConversionTests.java
Error mixing types: vectorx[4]:{float_top} and float_top
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:1179
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S107603/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/57d56251-e15d-4be2-a96f-2fece2c8162e/runs/971fce5c-2e86-4644-94a9-92f392cad7dc/workspace/open/src/hotspot/share/opto/type.cpp:1179), pid=1036744, tid=1036759
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-internal-2022-10-14-0755324.emanuel.peter.fork3-jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-internal-2022-10-14-0755324.emanuel.peter.fork3-jdk, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x17d8378] Type::typerr(Type const*) const+0x84
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S48953/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6a05eca0-8afd-44ed-bb10-6608b5100f7c/runs/24fb71ad-6cc1-49b1-bb99-393b164a2865/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/3/core.1036744)
#
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S48953/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6a05eca0-8afd-44ed-bb10-6608b5100f7c/runs/24fb71ad-6cc1-49b1-bb99-393b164a2865/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/3/hs_err_pid1036744.log
- relates to
-
JDK-8289422 Fix and re-enable vector conditional move
-
- Resolved
-